--- a/core/res/res/values/attrs.xml
+++ b/core/res/res/values/attrs.xml
@@ -2602,6 +2602,9 @@
         <!-- Short description of the functionality the service implements. This attribute
              is mandatory.-->
         <attr name="description" />
+        <!-- Whether the device must be unlocked before routing data to this service.
+             The default is false.-->
+        <attr name="requireDeviceUnlock" format="boolean"/>
     </declare-styleable>
 
     <!-- Use <code>offhost-apdu-service</code> as the root tag of the XML resource that
@@ -2622,7 +2625,8 @@
         <!-- Short description of what the AID group implements. This attribute is mandatory.-->
         <attr name="description" />
         <!-- The category attribute will be used by the Android platform to present
-             multiple applications that register AIDs in the same category uniformly.
+             multiple applications that register ISO 7816 Application IDs (AIDs) in the
+             same category uniformly.
              Additionally, when a category is specified, Android will ensure that either
              all AIDs in this group are routed to this application, or none at all.
              This attribute is optional.-->
